example-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: example-deployment
  name: example-deployment
  namespace: colors
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-deployment
  template:
    metadata:
      labels:
        app: example-deployment
    spec:
      containers:
        - name: example-deployment
          image:
          ports:
            - containerPort: 80
