example-blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 80
      nodePort: 30984
  selector:
    app: hello
    version: blue
