example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
  labels:
    app: example-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: example-service
  type: NodePort
